# freeroute

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  install.sh
.github/workflows/: release.yml
service/: pyproject.toml
service/src/: config.py  dns_proxy.py  domain_lists.py  domain_matcher.py  domain_matchers.py  domain_router.py  event_logger.py  installer.py  ip_route.py  logger.py  main.py  network_interfaces.py  scheduled.py  web_server.py
ui/: .gitignore  package-lock.json  package.json
ui/src/: App.css  App.tsx
ui/src/components/: DomainListSettingsButton.tsx  EditDomainListDialog.tsx  EventList.tsx  ResolveEventItem.tsx
ui/src/model/: EventListContext.tsx  EventListReducer.ts  Events.ts
