[tool.poetry]
name = "freeroute"
version = "0.1.0"
description = ""
authors = ["Anton"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
netifaces = "^0.11.0"
pyyaml = "^6.0"
pydantic = "^1.10.7"
aiodnsresolver = "^0.0.151"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"
aiohttp-sse = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
